修复终审报告迭代3的7个P1问题
1. [F-01] likeIgnoreCase() 通配符转义：修改所有 likeIgnoreCase 方法，自动转义 % 和 _ 通配符并包裹 %...%，消除 LIKE 注入风险
2. [F-02] LambdaUtils 缓存清理竞态：添加 AtomicBoolean 锁确保同一时刻只有一个线程执行清理
3. [F-03] ProjectionSpec.JoinSpec 异常处理：添加 try-catch，IllegalArgumentException 直接重新抛出，其他异常包装为 MyJpaPlusException
4. [F-04] resolveExistsWithTempQuery 文档：添加 Javadoc 说明临时 CriteriaQuery 的用途和兼容性假设
5. [F-05] ConditionNode 字段封装：将所有内部节点类字段从 public 改为 package-private（CollectionNode 保持 public）
6. [F-06] executeLimited() 文档：为 UpdateSpec 和 DeleteSpec 的 executeLimited 方法添加并发注意事项文档
7. [F-07] deprecated findAllStream @Transactional 移除：移除误导性的 @Transactional 注解

同步更新 6 个测试文件中的 likeIgnoreCase 调用（移除手动添加的 % 通配符）。
全部 595 个单元测试通过。